--- a/src/test/resources/templates/mail/order-admin.html
+++ b/src/test/resources/templates/mail/order-admin.html
@@ -2,10 +2,31 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <title>NEW ORDER</title>
 </head>
 <body>
-    <p>
-        This is just test mail
-    </p>
+    <h4>NEW ORDER <span th:text="${id}" ></span> </h4>
+    <div style="height: 10px" ></div>
+    <div>
+        <table>
+            <thead>
+            <tr>
+                <th>Client Name</th>
+                <th>Client Address</th>
+                <th>Shipping Value</th>
+                <th>Product Value</th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td th:text="${clientName}">clientName</td>
+                <td th:text="${clientAddress}">clientAddress</td>
+                <td th:text="${productValue}">productValue</td>
+                <td th:text="${shippingValue}">shippingValue</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
